# async-solipsism

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg
.github/workflows/: test.yml
src/async_solipsism/: __init__.py  clock.py  exceptions.py  loop.py  selector.py  socket.py  transport.py
test/: test_loop.py  test_socket.py
