[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async-solipsism"
dynamic = ["version", "readme"]
description = "Asyncio event loop that doesn't interact with the outside world"
authors = [
    {name = "Bruce Merry", email = "bmerry@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Testing :: Mocking",
]

[project.urls]
Homepage = "https://github.com/bmerry/async-solipsism"

[project.optional-dependencies]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio>=0.23",
    "pytest-mock",
]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
version = {attr = "async_solipsism.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
