[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async-solipsism"
dynamic = ["version"]
readme = "README.md"
description = "Asyncio event loop that doesn't interact with the outside world"
authors = [
    {name = "Bruce Merry", email = "bmerry@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Testing :: Mocking",
]

[project.urls]
Homepage = "https://github.com/bmerry/async-solipsism"

[project.optional-dependencies]
test = [
    "backports.asyncio.runner; python_version<'3.11'",
    "pre-commit",
    "pytest",
    "pytest-asyncio>=0.23",
    "pytest-mock",
]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
version = {attr = "async_solipsism.__version__"}

[tool.ruff]
line-length = 120
