[metadata]
name = async-solipsism
description = Asyncio event loop that doesn't interact with the outside world
author = Bruce Merry
author_email = bmerry@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio
