[metadata]
name = async-solipsism
version = attr: src.async_solipsism.__version__
description = Asyncio event loop that doesn't interact with the outside world
long_description = file:README.md
long_description_content_type = text/markdown
author = Bruce Merry
author_email = bmerry@gmail.com
license = GPLv3
url = https://github.com/bmerry/async-solipsism
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Software Development :: Testing :: Mocking

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-mock
